syntax = "proto3";

option csharp_namespace = "Proto.DTO.Ticket";

message TicketProto {
  string ticket_id = 1;
  string name = 2;
  string booking_number = 3;
  string documentation = 4;
  repeated string sprint_ids = 5;
}
